--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ autobins = false
 [lib]
 name = "c2rust_out"
 path = "c2rust-lib.rs"
-crate_type = ["cdylib", "rlib"]
+crate_type = [ "rlib"]
 
 [[bin]]
 path = "example.rs"
